--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       content="Web site created using create-react-app"
     />
    
-    <title>React App</title>
+    <title>Ecommerce website</title>
+    
   </head>
   <body>
     
